Use GHOSTSCRIPT instead of GS to use generic description
Reported by:	danfe


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316614 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/ocaml-images/Makefile
+++ b/graphics/ocaml-images/Makefile
@@ -36,9 +36,8 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 CONFIGURE_ARGS+=	--without-lablgtk
 MAKE_JOBS_UNSAFE=	yes
 
-OPTIONS_DEFINE=	PNG JPEG TIFF XPM GIF FREETYPE GS GTK2 DOCS
-OPTIONS_DEFAULT=	PNG JPEG TIFF XPM GIT FREETYPE GS
-GS_DESC=	PostScript support via Ghostscript
+OPTIONS_DEFINE=	PNG JPEG TIFF XPM GIF FREETYPE GHOSTSCRIPT GTK2 DOCS
+OPTIONS_DEFAULT=	PNG JPEG TIFF XPM GIT FREETYPE GHOSTSCRIPT
 
 .include <bsd.port.options.mk>
 
@@ -84,7 +83,7 @@ CONFIGURE_ARGS+=	--with-freetype
 CONFIGURE_ARGS+=	--without-freetype
 .endif
 
-.if ${PORT_OPTIONS:MGS}
+.if ${PORT_OPTIONS:MGHOSTSCRIPT}
 USE_GHOSTSCRIPT=	yes
 CONFIGURE_ARGS+=	--with-gs
 .else
