--- a/misc/magicpoint/Makefile
+++ b/misc/magicpoint/Makefile
@@ -14,7 +14,7 @@ LIB_DEPENDS+=	png15:${PORTSDIR}/graphics/png \
 		mng:${PORTSDIR}/graphics/libmng
 RUN_DEPENDS+=	pnmscale:${PORTSDIR}/graphics/netpbm
 
-USE_IMAKE=	yese
+USE_IMAKE=	yes
 USE_XORG=	x11 xext xmu xt sm ice xi xtst
 WANT_GNOME=	yes
 GNU_CONFIGURE=	yes
