--- a/graphics/py-pydot/Makefile
+++ b/graphics/py-pydot/Makefile
@@ -6,8 +6,8 @@
 #
 
 PORTNAME=	pydot
-PORTVERSION=	1.0.2
-PORTREVISION=	4
+PORTVERSION=	1.0.28
+#PORTREVISION=	0
 CATEGORIES=	graphics python
 MASTER_SITES=	${MASTER_SITE_GOOGLE_CODE}
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
