Convert USE_GETTEXT -> USES=gettext
While here:
- Trim headers
- Remove some useless pre.mk/post.mk
- Convert to optionsng


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316620 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/soundtracker/Makefile
+++ b/audio/soundtracker/Makefile
@@ -31,7 +31,7 @@ DESKTOP_ENTRIES="SoundTracker" "Pattern-oriented music editor" \
 		"${PREFIX}/share/pixmaps/${PORTNAME}.xpm" \
 		"soundtracker" "AudioVideo;Audio;AudioVideoEditing;" false
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MASM}
 CONFIGURE_ARGS+=	--enable-asm
@@ -57,7 +57,7 @@ CONFIGURE_ARGS+=	--disable-sdl
 .endif
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 PLIST_SUB+=	NLS=""
 .else
 CONFIGURE_ARGS+=	--disable-nls
@@ -83,4 +83,4 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/sharp.xpm \
 		${PREFIX}/share/pixmaps/soundtracker.xpm
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
