--- a/devel/yasm/Makefile
+++ b/devel/yasm/Makefile
@@ -1,7 +1,4 @@
-# ex:ts=8
-# Ports collection makefile for:	yasm
-# Date created:			Apr 7, 2003
-# Whom:				ijliao
+# Created by: ijliao
 #
 # $FreeBSD$
 #
@@ -23,21 +20,21 @@ CONFIGURE_ARGS+=--disable-python --disable-python-bindings
 CPPFLAGS+=	${CXXFLAGS} -I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
 .if ${ARCH} == "ia64"
 CFLAGS:=	${CFLAGS:C/-O[0-9]//g}
 .endif
 
-.if defined(WITHOUT_NLS)
-CONFIGURE_ARGS+=--disable-nls --without-libiconv-prefix --without-libintl-prefix
-.else
-USE_GETTEXT=	yes
+.if ${PORT_OPTIONS:MNLS}
+USES+=	gettext
 USE_ICONV=	yes
+.else
+CONFIGURE_ARGS+=--disable-nls --without-libiconv-prefix --without-libintl-prefix
 .endif
 
 INSTALL_TARGET=	install install-man
 MAN1=		yasm.1
 MAN7=		yasm_arch.7 yasm_dbgfmts.7 yasm_objfmts.7 yasm_parsers.7
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
