--- a/dns/dnsmasq/Makefile
+++ b/dns/dnsmasq/Makefile
@@ -40,11 +40,10 @@ CFLAGS+=	-DNO_IPV6
 .endif
 
 .if ${PORT_OPTIONS:MNLS}
-USES+=		pkgconfig
+USES+=		pkgconfig gettext
 LIB_DEPENDS+=	idn:${PORTSDIR}/dns/libidn
 PLIST_SUB+=	NLS=""
 ALL_TARGET=	all-i18n
-USE_GETTEXT=	yes
 USE_GMAKE=	yes
 .else
 PLIST_SUB+=	NLS="@comment "
