PyAL is a wrapper around the OpenAL library and as such similar to the discontinued PyOpenAL project. In contrast to PyOpenAL, it has no licensing restrictions, nor does it rely on C code, but uses ctypes instead.
WWW: http://bitbucket.org/marcusva/py-al


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316621 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -617,6 +617,7 @@
     SUBDIR += puddletag
     SUBDIR += pulseaudio
     SUBDIR += pure-audio
+    SUBDIR += py-al
     SUBDIR += py-ao
     SUBDIR += py-apetag
     SUBDIR += py-pyacoustid
