--- a/databases/R-cran-DBI/Makefile
+++ b/databases/R-cran-DBI/Makefile
@@ -2,13 +2,15 @@
 # $FreeBSD$
 
 PORTNAME=	DBI
-DISTVERSION=	0.2-5
-PORTREVISION=	8
+DISTVERSION=	0.2-6
 CATEGORIES=	databases
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
 MAINTAINER=	tota@FreeBSD.org
 COMMENT=	R Database Interface
+
+LICENSE=	LGPL20 LGPL21 LGPL3
+LICENSE_COMB=	dual
 
 USE_R_MOD=	yes
 R_MOD_AUTOPLIST=	yes
